# mtg2

./: .gitignore  Makefile  README.md  cabal-ghcjs.project  cabal.project  default.nix  project.nix  shell.nix  stack.yaml
data/examples/cards/: LlanowarElves.json
docs/: IMPLEMENTATION.md  Old.txt  mtg.md  scripts.txt  scryfall.md
docs/old/: Old.txt
docs/stdout/: postgresql.txt  postgresql_good.txt
mse/: TODO.md
mse/data/mse/: egg-mse-card.txt  egg-mse-keyword.txt
mse/docs/: NOTES.md
mtg-csv/hs/: LICENSE  cabal.project  mtg-csv.cabal
mtg-csv/hs/executable/: .dir-locals.el
mtg-csv/hs/executable/Program/MTG/CSV/: CLI.hs  Constants.hs  IO.hs  Main.hs  Paths.hs  Prelude.hs  Types.hs
mtg-csv/hs/test/: .dir-locals.el  DocTests.hs
mtg-json/: LICENSE  Makefile  NOTES.md  README.md  mtg-json.cabal
mtg-json/data/json/: CardTypes.json  Keywords.json
mtg-json/executables/: .dir-locals.el
mtg-json/executables/Program/MTG/JSON/: CLI.hs  Constants.hs  IO.hs  Main.hs  Paths.hs  Prelude.hs  SrcDst.hs  Types.hs
mtg-json/executables/Program/MTG/SQL/JSON/: CLI.hs  IO.hs
mtg-json/srcdst/: .dir-locals.el  TODO.md
mtg-json/srcdst/Conduit/: SrcDst.hs
mtg-json/srcdst/Data/: SrcDst.hs
mtg-json/srcdst/IO/: SrcDst.hs
mtg-json/srcdst/Prelude/: SrcDst.hs
mtg-json/test/: .dir-locals.el  DocTests.hs
mtg-scryfall/: README.md  mtg-scryfall.cabal
mtg-scryfall/nix/: mtg-scryfall.nix  project.nix  shell.nix
mtg-scryfall/nix/haskell/project/: default.nix  haskellCompilerFrom.nix  haskellPackagesFrom.nix
mtg-scryfall/nix/nixpkgs/: default.nix  nixpkgs.json
mtg-scryfall/nix/nixpkgs/overlays/: default.nix
mtg-scryfall/nix/nixpkgs/overlays/haskell/: default.nix
mtg-scryfall/nix/overrides/: default.nix
mtg-scryfall/nix/overrides/haskell/: default.nix
mtg-scryfall/nix/overrides/haskell/compiler/: default.nix
mtg-scryfall/nix/overrides/haskell/haskellPackages/: default.nix  original.nix
mtg-scryfall/nix/overrides/haskell/haskellPackages/mkderivation/: benchmarking.nix  hoogle.nix  profiling.nix  testing.nix
mtg-scryfall/nix/overrides/haskell/myHaskellPackages/: default.nix
mtg-scryfall/nix/overrides/haskell/myHaskellPackages/all/: default.nix
mtg-scryfall/nix/overrides/haskell/myHaskellPackages/git/: default.nix  reflex.json  spiros.json
mtg-scryfall/nix/overrides/haskell/myHaskellPackages/hackage/: default.nix
mtg-scryfall/nix/overrides/haskell/myHaskellPackages/local/: default.nix
mtg-scryfall/nix/overrides/haskell/myHaskellPackages/utilities/: default.nix
mtg-scryfall/nix/project/call/: default.nix
mtg-scryfall/sources/MTG/Scryfall/Schemas/: Card.hs  Face.hs  Image.hs
mtg-scryfall/sources/Prelude/MTG/: Scryfall.hs
mtg-sql/: Makefile  README.md  logfile  shell
mtg-sql/hs/: LICENSE.txt  mtg-sql.cabal
mtg-sql/hs/executable/: .dir-locals.el
mtg-sql/hs/executable/Program/MTG/SQL/Postgres/: CLI.hs  Constants.hs  IO.hs  Main.hs  Paths.hs  Prelude.hs  Types.hs
mtg-sql/hs/test/: DocTests.hs
mtg-sql/nix/: environment.nix  programs.nix  shell.nix  utilities.nix  variables.nix
mtg-sql/sql/: cards.sql  sets.sql
mtg-types/: LICENSE  mtg-types.cabal
mtg-types/share/lisp/: sboo-unicode-haskell-pattern.el
mtg-types/test/: .dir-locals.el  DocTests.hs
notes/: haskell-project.txt
release/: cabal.project.freeze
scripts/: README.md  get-all-cards-json.sh  get-cards-from-scryfall.sh  get-images-from-scryfall.sh  get-llanowar-elves-images.sh  shell.nix  shellcheck.sh
scripts/Scryfall/: DownloadImages.hs  README.md  download-images
tmp/Enums/: Supertype.hs
tmp/nix/: environment.nix  nixpkgs.nix  programs.nix  shell.nix  variables.nix
tmp/nix/lib/: rss.nix
